--- a/main.ipynb
+++ b/main.ipynb
@@ -9,9 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
-    "import matplotlin.pyplot as plt\r\n",
+    "import matplotlib.pyplot as plt\r\n",
     "import numpy as np\r\n",
     "\r\n",
     "import tensorflow as tf\r\n",
@@ -21,12 +21,387 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Find Datasets"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "tsdf.list_builders()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['abstract_reasoning',\n",
+       " 'accentdb',\n",
+       " 'aeslc',\n",
+       " 'aflw2k3d',\n",
+       " 'ag_news_subset',\n",
+       " 'ai2_arc',\n",
+       " 'ai2_arc_with_ir',\n",
+       " 'amazon_us_reviews',\n",
+       " 'anli',\n",
+       " 'arc',\n",
+       " 'bair_robot_pushing_small',\n",
+       " 'bccd',\n",
+       " 'beans',\n",
+       " 'big_patent',\n",
+       " 'bigearthnet',\n",
+       " 'billsum',\n",
+       " 'binarized_mnist',\n",
+       " 'binary_alpha_digits',\n",
+       " 'blimp',\n",
+       " 'bool_q',\n",
+       " 'c4',\n",
+       " 'caltech101',\n",
+       " 'caltech_birds2010',\n",
+       " 'caltech_birds2011',\n",
+       " 'cars196',\n",
+       " 'cassava',\n",
+       " 'cats_vs_dogs',\n",
+       " 'celeb_a',\n",
+       " 'celeb_a_hq',\n",
+       " 'cfq',\n",
+       " 'cherry_blossoms',\n",
+       " 'chexpert',\n",
+       " 'cifar10',\n",
+       " 'cifar100',\n",
+       " 'cifar10_1',\n",
+       " 'cifar10_corrupted',\n",
+       " 'citrus_leaves',\n",
+       " 'cityscapes',\n",
+       " 'civil_comments',\n",
+       " 'clevr',\n",
+       " 'clic',\n",
+       " 'clinc_oos',\n",
+       " 'cmaterdb',\n",
+       " 'cnn_dailymail',\n",
+       " 'coco',\n",
+       " 'coco_captions',\n",
+       " 'coil100',\n",
+       " 'colorectal_histology',\n",
+       " 'colorectal_histology_large',\n",
+       " 'common_voice',\n",
+       " 'coqa',\n",
+       " 'cos_e',\n",
+       " 'cosmos_qa',\n",
+       " 'covid19',\n",
+       " 'covid19sum',\n",
+       " 'crema_d',\n",
+       " 'curated_breast_imaging_ddsm',\n",
+       " 'cycle_gan',\n",
+       " 'd4rl_adroit_door',\n",
+       " 'd4rl_adroit_hammer',\n",
+       " 'd4rl_adroit_pen',\n",
+       " 'd4rl_adroit_relocate',\n",
+       " 'd4rl_mujoco_ant',\n",
+       " 'd4rl_mujoco_halfcheetah',\n",
+       " 'd4rl_mujoco_hopper',\n",
+       " 'd4rl_mujoco_walker2d',\n",
+       " 'dart',\n",
+       " 'davis',\n",
+       " 'deep_weeds',\n",
+       " 'definite_pronoun_resolution',\n",
+       " 'dementiabank',\n",
+       " 'diabetic_retinopathy_detection',\n",
+       " 'div2k',\n",
+       " 'dmlab',\n",
+       " 'doc_nli',\n",
+       " 'dolphin_number_word',\n",
+       " 'downsampled_imagenet',\n",
+       " 'drop',\n",
+       " 'dsprites',\n",
+       " 'dtd',\n",
+       " 'duke_ultrasound',\n",
+       " 'e2e_cleaned',\n",
+       " 'efron_morris75',\n",
+       " 'emnist',\n",
+       " 'eraser_multi_rc',\n",
+       " 'esnli',\n",
+       " 'eurosat',\n",
+       " 'fashion_mnist',\n",
+       " 'flic',\n",
+       " 'flores',\n",
+       " 'food101',\n",
+       " 'forest_fires',\n",
+       " 'fuss',\n",
+       " 'gap',\n",
+       " 'geirhos_conflict_stimuli',\n",
+       " 'gem',\n",
+       " 'genomics_ood',\n",
+       " 'german_credit_numeric',\n",
+       " 'gigaword',\n",
+       " 'glue',\n",
+       " 'goemotions',\n",
+       " 'gpt3',\n",
+       " 'gref',\n",
+       " 'groove',\n",
+       " 'gtzan',\n",
+       " 'gtzan_music_speech',\n",
+       " 'hellaswag',\n",
+       " 'higgs',\n",
+       " 'horses_or_humans',\n",
+       " 'howell',\n",
+       " 'i_naturalist2017',\n",
+       " 'imagenet2012',\n",
+       " 'imagenet2012_corrupted',\n",
+       " 'imagenet2012_multilabel',\n",
+       " 'imagenet2012_real',\n",
+       " 'imagenet2012_subset',\n",
+       " 'imagenet_a',\n",
+       " 'imagenet_r',\n",
+       " 'imagenet_resized',\n",
+       " 'imagenet_v2',\n",
+       " 'imagenette',\n",
+       " 'imagewang',\n",
+       " 'imdb_reviews',\n",
+       " 'irc_disentanglement',\n",
+       " 'iris',\n",
+       " 'kddcup99',\n",
+       " 'kitti',\n",
+       " 'kmnist',\n",
+       " 'lambada',\n",
+       " 'lfw',\n",
+       " 'librispeech',\n",
+       " 'librispeech_lm',\n",
+       " 'libritts',\n",
+       " 'ljspeech',\n",
+       " 'lm1b',\n",
+       " 'lost_and_found',\n",
+       " 'lsun',\n",
+       " 'lvis',\n",
+       " 'malaria',\n",
+       " 'math_dataset',\n",
+       " 'mctaco',\n",
+       " 'mlqa',\n",
+       " 'mnist',\n",
+       " 'mnist_corrupted',\n",
+       " 'movie_lens',\n",
+       " 'movie_rationales',\n",
+       " 'movielens',\n",
+       " 'moving_mnist',\n",
+       " 'multi_news',\n",
+       " 'multi_nli',\n",
+       " 'multi_nli_mismatch',\n",
+       " 'natural_questions',\n",
+       " 'natural_questions_open',\n",
+       " 'newsroom',\n",
+       " 'nsynth',\n",
+       " 'nyu_depth_v2',\n",
+       " 'ogbg_molpcba',\n",
+       " 'omniglot',\n",
+       " 'open_images_challenge2019_detection',\n",
+       " 'open_images_v4',\n",
+       " 'openbookqa',\n",
+       " 'opinion_abstracts',\n",
+       " 'opinosis',\n",
+       " 'opus',\n",
+       " 'oxford_flowers102',\n",
+       " 'oxford_iiit_pet',\n",
+       " 'para_crawl',\n",
+       " 'patch_camelyon',\n",
+       " 'paws_wiki',\n",
+       " 'paws_x_wiki',\n",
+       " 'pet_finder',\n",
+       " 'pg19',\n",
+       " 'piqa',\n",
+       " 'places365_small',\n",
+       " 'plant_leaves',\n",
+       " 'plant_village',\n",
+       " 'plantae_k',\n",
+       " 'protein_net',\n",
+       " 'qa4mre',\n",
+       " 'qasc',\n",
+       " 'quac',\n",
+       " 'quickdraw_bitmap',\n",
+       " 'race',\n",
+       " 'radon',\n",
+       " 'reddit',\n",
+       " 'reddit_disentanglement',\n",
+       " 'reddit_tifu',\n",
+       " 'ref_coco',\n",
+       " 'resisc45',\n",
+       " 'rlu_atari',\n",
+       " 'rlu_dmlab_explore_object_rewards_few',\n",
+       " 'rlu_dmlab_explore_object_rewards_many',\n",
+       " 'rlu_dmlab_rooms_select_nonmatching_object',\n",
+       " 'rlu_dmlab_rooms_watermaze',\n",
+       " 'rlu_dmlab_seekavoid_arena01',\n",
+       " 'robonet',\n",
+       " 'rock_paper_scissors',\n",
+       " 'rock_you',\n",
+       " 's3o4d',\n",
+       " 'salient_span_wikipedia',\n",
+       " 'samsum',\n",
+       " 'savee',\n",
+       " 'scan',\n",
+       " 'scene_parse150',\n",
+       " 'schema_guided_dialogue',\n",
+       " 'scicite',\n",
+       " 'scientific_papers',\n",
+       " 'sentiment140',\n",
+       " 'shapes3d',\n",
+       " 'siscore',\n",
+       " 'smallnorb',\n",
+       " 'snli',\n",
+       " 'so2sat',\n",
+       " 'speech_commands',\n",
+       " 'spoken_digit',\n",
+       " 'squad',\n",
+       " 'stanford_dogs',\n",
+       " 'stanford_online_products',\n",
+       " 'star_cfq',\n",
+       " 'starcraft_video',\n",
+       " 'stl10',\n",
+       " 'story_cloze',\n",
+       " 'summscreen',\n",
+       " 'sun397',\n",
+       " 'super_glue',\n",
+       " 'svhn_cropped',\n",
+       " 'symmetric_solids',\n",
+       " 'tao',\n",
+       " 'ted_hrlr_translate',\n",
+       " 'ted_multi_translate',\n",
+       " 'tedlium',\n",
+       " 'tf_flowers',\n",
+       " 'the300w_lp',\n",
+       " 'tiny_shakespeare',\n",
+       " 'titanic',\n",
+       " 'trec',\n",
+       " 'trivia_qa',\n",
+       " 'tydi_qa',\n",
+       " 'uc_merced',\n",
+       " 'ucf101',\n",
+       " 'vctk',\n",
+       " 'visual_domain_decathlon',\n",
+       " 'voc',\n",
+       " 'voxceleb',\n",
+       " 'voxforge',\n",
+       " 'waymo_open_dataset',\n",
+       " 'web_nlg',\n",
+       " 'web_questions',\n",
+       " 'wider_face',\n",
+       " 'wiki40b',\n",
+       " 'wiki_bio',\n",
+       " 'wiki_table_questions',\n",
+       " 'wiki_table_text',\n",
+       " 'wikiann',\n",
+       " 'wikihow',\n",
+       " 'wikipedia',\n",
+       " 'wikipedia_toxicity_subtypes',\n",
+       " 'wine_quality',\n",
+       " 'winogrande',\n",
+       " 'wmt13_translate',\n",
+       " 'wmt14_translate',\n",
+       " 'wmt15_translate',\n",
+       " 'wmt16_translate',\n",
+       " 'wmt17_translate',\n",
+       " 'wmt18_translate',\n",
+       " 'wmt19_translate',\n",
+       " 'wmt_t2t_translate',\n",
+       " 'wmt_translate',\n",
+       " 'wordnet',\n",
+       " 'wsc273',\n",
+       " 'xnli',\n",
+       " 'xquad',\n",
+       " 'xsum',\n",
+       " 'xtreme_pawsx',\n",
+       " 'xtreme_xnli',\n",
+       " 'yelp_polarity_reviews',\n",
+       " 'yes_no',\n",
+       " 'youtube_vis']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Get information from data"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "builder = tsdf.builder('rock_paper_scissors')\r\n",
+    "info = builder.info\r\n",
+    "\r\n",
+    "info"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tfds.core.DatasetInfo(\n",
+       "    name='rock_paper_scissors',\n",
+       "    full_name='rock_paper_scissors/3.0.0',\n",
+       "    description=\"\"\"\n",
+       "    Images of hands playing rock, paper, scissor game.\n",
+       "    \"\"\",\n",
+       "    homepage='http://laurencemoroney.com/rock-paper-scissors-dataset',\n",
+       "    data_path='C:\\\\Users\\\\putra\\\\tensorflow_datasets\\\\rock_paper_scissors\\\\3.0.0',\n",
+       "    download_size=Unknown size,\n",
+       "    dataset_size=Unknown size,\n",
+       "    features=FeaturesDict({\n",
+       "        'image': Image(shape=(300, 300, 3), dtype=tf.uint8),\n",
+       "        'label': ClassLabel(shape=(), dtype=tf.int64, num_classes=3),\n",
+       "    }),\n",
+       "    supervised_keys=('image', 'label'),\n",
+       "    disable_shuffling=False,\n",
+       "    splits={\n",
+       "    },\n",
+       "    citation=\"\"\"@ONLINE {rps,\n",
+       "    author = \"Laurence Moroney\",\n",
+       "    title = \"Rock, Paper, Scissors Dataset\",\n",
+       "    month = \"feb\",\n",
+       "    year = \"2019\",\n",
+       "    url = \"http://laurencemoroney.com/rock-paper-scissors-dataset\"\n",
+       "    }\"\"\",\n",
+       ")"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.0",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.8.0 64-bit"
+  },
+  "interpreter": {
+   "hash": "e040582e1380c7d98b344d13521590c520e597b89b3bf8caa9d800f3931b642f"
   }
  },
  "nbformat": 4,
