Train CNN so long

--- a/main.ipynb
+++ b/main.ipynb
@@ -573,6 +573,42 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Train a network (with Convolutional approach)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "model = keras.Sequential([\r\n",
+    "    keras.layers.Conv2D(64, 3, activation='relu', input_shape=(300, 300, 1)),\r\n",
+    "    keras.layers.Conv2D(32, 3, activation='relu'),\r\n",
+    "    keras.layers.Flatten(),\r\n",
+    "    keras.layers.Dense(3, activation='softmax'),\r\n",
+    "])\r\n",
+    "\r\n",
+    "model.compile(optimizer='adam',\r\n",
+    "    loss=keras.losses.SparseCategoricalCrossentropy(),\r\n",
+    "    metrics=['accuracy'])\r\n",
+    "\r\n",
+    "model.fit(train_images, train_labels, epochs=5, batch_size=32)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Epoch 1/5\n",
+      " 5/79 [>.............................] - ETA: 36:24 - loss: 86.9386 - accuracy: 0.2688 "
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
