--- a/main.ipynb
+++ b/main.ipynb
@@ -68,11 +68,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Z7n9dlzYsWl",
-        "outputId": "316dfd0e-2b0b-4f6c-b74f-5ac7e07b6eb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8Z7n9dlzYsWl",
+        "outputId": "316dfd0e-2b0b-4f6c-b74f-5ac7e07b6eb2"
       },
       "source": [
         "tsdf.list_builders()"
@@ -326,11 +326,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lP5mdAlIYsWo",
-        "outputId": "4413916b-275a-48f4-f723-1fd63321962b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lP5mdAlIYsWo",
+        "outputId": "4413916b-275a-48f4-f723-1fd63321962b"
       },
       "source": [
         "builder = tsdf.builder('rock_paper_scissors')\n",
@@ -387,11 +387,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2PiOi1kpYsWq",
-        "outputId": "0239bea6-8ab8-43f9-a40e-4e6597f95071",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2PiOi1kpYsWq",
+        "outputId": "0239bea6-8ab8-43f9-a40e-4e6597f95071"
       },
       "source": [
         "ds_train = tsdf.load(name='rock_paper_scissors', split='train')\n",
@@ -423,12 +423,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b3RQaxZ_YsWs",
-        "outputId": "8c0727f7-08b7-4a66-a618-04b44a7ff50e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 568
-        }
+        },
+        "id": "b3RQaxZ_YsWs",
+        "outputId": "8c0727f7-08b7-4a66-a618-04b44a7ff50e"
       },
       "source": [
         "fig = tsdf.show_examples(info, ds_train)"
@@ -500,11 +500,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CKib3cBcYsWw",
-        "outputId": "50e81221-2ed2-4042-829e-f76d4209403b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CKib3cBcYsWw",
+        "outputId": "50e81221-2ed2-4042-829e-f76d4209403b"
       },
       "source": [
         "train_images[0].shape"
@@ -535,11 +535,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CFCtA2b2YsWy",
-        "outputId": "5772380a-f602-44cf-c976-5f3bd2bc28b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CFCtA2b2YsWy",
+        "outputId": "5772380a-f602-44cf-c976-5f3bd2bc28b8"
       },
       "source": [
         "model = keras.Sequential([\n",
@@ -588,11 +588,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PwvOoI86YsWz",
-        "outputId": "d78d842d-61e1-4f15-8e27-f1d701794761",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PwvOoI86YsWz",
+        "outputId": "d78d842d-61e1-4f15-8e27-f1d701794761"
       },
       "source": [
         "model.evaluate(test_images, test_labels)"
@@ -630,11 +630,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t_7-ZbSUYsW0",
-        "outputId": "eac55e77-2159-4847-dd1b-0c4c5efa4184",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t_7-ZbSUYsW0",
+        "outputId": "eac55e77-2159-4847-dd1b-0c4c5efa4184"
       },
       "source": [
         "model = keras.Sequential([\n",
@@ -683,11 +683,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JqGhnbyuaAMY",
-        "outputId": "a8114382-7c37-4255-f0e9-f94151125b28",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JqGhnbyuaAMY",
+        "outputId": "a8114382-7c37-4255-f0e9-f94151125b28"
       },
       "source": [
         "model.evaluate(test_images, test_labels)"
@@ -725,13 +725,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JTAS8c9cahZz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JTAS8c9cahZz",
+        "outputId": "893e71de-81db-4636-a293-7e01b1071c71"
       },
       "source": [
         "model = keras.Sequential([\n",
-        "    keras.layers.Conv2D(64, 3, activation='relu', input_shape=(300, 300, 1)),\n",
+        "    keras.layers.AveragePooling2D(6, 3, input_shape=(300, 300, 1)),\n",
+        "    keras.layers.Conv2D(64, 3, activation='relu'),     # Reduce image\n",
         "    keras.layers.Conv2D(32, 3, activation='relu'),\n",
+        "    keras.layers.Dropout(0.5),\n",
+        "    keras.layers.MaxPool2D(2,2),\n",
         "    keras.layers.Flatten(),\n",
+        "    keras.layers.Dense(128, activation='relu'),\n",
         "    keras.layers.Dense(3, activation='softmax'),\n",
         "])\n",
         "\n",
@@ -741,8 +749,68 @@
         "\n",
         "model.fit(train_images, train_labels, epochs=5, batch_size=32)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "79/79 [==============================] - 5s 53ms/step - loss: 1.2213 - accuracy: 0.7004\n",
+            "Epoch 2/5\n",
+            "79/79 [==============================] - 4s 53ms/step - loss: 0.1077 - accuracy: 0.9774\n",
+            "Epoch 3/5\n",
+            "79/79 [==============================] - 4s 53ms/step - loss: 0.0077 - accuracy: 0.9988\n",
+            "Epoch 4/5\n",
+            "79/79 [==============================] - 4s 52ms/step - loss: 0.0039 - accuracy: 1.0000\n",
+            "Epoch 5/5\n",
+            "79/79 [==============================] - 4s 52ms/step - loss: 0.0019 - accuracy: 1.0000\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f8ad040f150>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j78CX80CcW2w",
+        "outputId": "84f67a71-b058-4b0b-8d8e-0b7cfd07b9bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.evaluate(test_images, test_labels)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12/12 [==============================] - 0s 27ms/step - loss: 0.7312 - accuracy: 0.6962\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.7312031984329224, 0.6962365508079529]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     }
   ]
 }
