--- a/main.ipynb
+++ b/main.ipynb
@@ -782,11 +782,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j78CX80CcW2w",
-        "outputId": "84f67a71-b058-4b0b-8d8e-0b7cfd07b9bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j78CX80CcW2w",
+        "outputId": "84f67a71-b058-4b0b-8d8e-0b7cfd07b9bd"
       },
       "source": [
         "model.evaluate(test_images, test_labels)"
@@ -809,6 +809,345 @@
           },
           "metadata": {},
           "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fo1ZrcHUgZ1u"
+      },
+      "source": [
+        "## Hyperparameter Tuning"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "APK7P3I7jxac",
+        "outputId": "adf94c90-18ab-45a7-ae24-db72ac751ac4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "pip install -U keras-tuner"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting keras-tuner\n",
+            "  Downloading keras_tuner-1.0.4-py3-none-any.whl (97 kB)\n",
+            "\u001b[?25l\r\u001b[K     |███▍                            | 10 kB 23.3 MB/s eta 0:00:01\r\u001b[K     |██████▊                         | 20 kB 29.2 MB/s eta 0:00:01\r\u001b[K     |██████████                      | 30 kB 22.2 MB/s eta 0:00:01\r\u001b[K     |█████████████▍                  | 40 kB 18.0 MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 51 kB 13.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 61 kB 10.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 71 kB 11.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 81 kB 12.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▏ | 92 kB 11.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 97 kB 5.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from keras-tuner) (2.23.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from keras-tuner) (1.19.5)\n",
+            "Requirement already satisfied: ipython in /usr/local/lib/python3.7/dist-packages (from keras-tuner) (5.5.0)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from keras-tuner) (1.4.1)\n",
+            "Requirement already satisfied: tensorboard in /usr/local/lib/python3.7/dist-packages (from keras-tuner) (2.6.0)\n",
+            "Collecting kt-legacy\n",
+            "  Downloading kt_legacy-1.0.4-py3-none-any.whl (9.6 kB)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.7/dist-packages (from keras-tuner) (21.0)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (5.0.5)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (2.6.1)\n",
+            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (4.8.0)\n",
+            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (1.0.18)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (57.4.0)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (4.4.2)\n",
+            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (0.8.1)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from ipython->keras-tuner) (0.7.5)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->ipython->keras-tuner) (0.2.5)\n",
+            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->ipython->keras-tuner) (1.15.0)\n",
+            "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from traitlets>=4.2->ipython->keras-tuner) (0.2.0)\n",
+            "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging->keras-tuner) (2.4.7)\n",
+            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.7/dist-packages (from pexpect->ipython->keras-tuner) (0.7.0)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->keras-tuner) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->keras-tuner) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->keras-tuner) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->keras-tuner) (2021.5.30)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (0.4.5)\n",
+            "Requirement already satisfied: absl-py>=0.4 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (0.12.0)\n",
+            "Requirement already satisfied: google-auth<2,>=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (1.34.0)\n",
+            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (1.8.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (3.3.4)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (1.0.1)\n",
+            "Requirement already satisfied: grpcio>=1.24.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (1.39.0)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (0.37.0)\n",
+            "Requirement already satisfied: protobuf>=3.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (3.17.3)\n",
+            "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard->keras-tuner) (0.6.1)\n",
+            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard->keras-tuner) (4.7.2)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard->keras-tuner) (4.2.2)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard->keras-tuner) (0.2.8)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard->keras-tuner) (1.3.0)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tensorboard->keras-tuner) (4.6.4)\n",
+            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.7/dist-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard->keras-tuner) (0.4.8)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard->keras-tuner) (3.1.1)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->markdown>=2.6.8->tensorboard->keras-tuner) (3.5.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->markdown>=2.6.8->tensorboard->keras-tuner) (3.7.4.3)\n",
+            "Installing collected packages: kt-legacy, keras-tuner\n",
+            "Successfully installed keras-tuner-1.0.4 kt-legacy-1.0.4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8QvHSExQgfNQ",
+        "outputId": "c843e8fa-b20f-4141-88d0-0ba9da32c21a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from kerastuner.tuners import RandomSearch\n",
+        "\n",
+        "def build_model(hp):\n",
+        "  model = keras.Sequential()\n",
+        "\n",
+        "  model.add(keras.layers.AveragePooling2D(6,3,input_shape=(300,300,1)))\n",
+        "\n",
+        "  for i in range(hp.Int(\"Conv Layers\", min_value=0, max_value=3)):\n",
+        "    model.add(keras.layers.Conv2D(hp.Choice(f\"layer_{i}_filters\", [16,32,64]), 3, activation='relu'))\n",
+        "  \n",
+        "  model.add(keras.layers.MaxPool2D(2,2))\n",
+        "  model.add(keras.layers.Dropout(0.5))\n",
+        "  model.add(keras.layers.Flatten())\n",
+        "\n",
+        "  model.add(keras.layers.Dense(hp.Choice(\"Dense layer\", [64, 128, 256, 512, 1024]), activation='relu'))\n",
+        "\n",
+        "  model.add(keras.layers.Dense(3, activation='softmax'))\n",
+        "\n",
+        "  model.compile(optimizer='adam',\n",
+        "              loss=keras.losses.SparseCategoricalCrossentropy(),\n",
+        "              metrics=['accuracy'])\n",
+        "  \n",
+        "  return model\n",
+        "\n",
+        "tuner = RandomSearch(\n",
+        "    build_model,\n",
+        "    objective='val_accuracy',\n",
+        "    max_trials=32,\n",
+        ")\n",
+        "\n",
+        "tuner.search(train_images, train_labels, validation_data=(test_images, test_labels), epochs=10, batch_size=32)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Trial 32 Complete [00h 01m 22s]\n",
+            "val_accuracy: 0.8064516186714172\n",
+            "\n",
+            "Best val_accuracy So Far: 0.8064516186714172\n",
+            "Total elapsed time: 00h 24m 49s\n",
+            "INFO:tensorflow:Oracle triggered exit\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Oracle triggered exit\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eIXw5Rznsyqe"
+      },
+      "source": [
+        "best_model = tuner.get_best_models()[0]"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U9Jk2PrJs_Rd",
+        "outputId": "59d11b7a-8936-47a3-da36-987e1647453a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "best_model.evaluate(test_images, test_labels)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12/12 [==============================] - 0s 20ms/step - loss: 0.7457 - accuracy: 0.8065\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.7457301020622253, 0.8064516186714172]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F163FqVOtR_h",
+        "outputId": "18dab311-dfc4-4c8a-e8c8-2cd3df2d9520",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "best_model.summary()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "average_pooling2d (AveragePo (None, 99, 99, 1)         0         \n",
+            "_________________________________________________________________\n",
+            "conv2d (Conv2D)              (None, 97, 97, 64)        640       \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d (MaxPooling2D) (None, 48, 48, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "dropout (Dropout)            (None, 48, 48, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "flatten (Flatten)            (None, 147456)            0         \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 256)               37748992  \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 3)                 771       \n",
+            "=================================================================\n",
+            "Total params: 37,750,403\n",
+            "Trainable params: 37,750,403\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HX643M2XtcJl",
+        "outputId": "c36858bc-28d4-4bc4-da00-0c29b69752ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tuner.results_summary()"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Results summary\n",
+            "Results in ./untitled_project\n",
+            "Showing 10 best trials\n",
+            "Objective(name='val_accuracy', direction='max')\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 1\n",
+            "Dense layer: 256\n",
+            "layer_0_filters: 64\n",
+            "layer_1_filters: 64\n",
+            "layer_2_filters: 64\n",
+            "Score: 0.8064516186714172\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 1\n",
+            "Dense layer: 64\n",
+            "layer_0_filters: 64\n",
+            "layer_1_filters: 16\n",
+            "layer_2_filters: 16\n",
+            "Score: 0.7634408473968506\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 1\n",
+            "Dense layer: 512\n",
+            "layer_0_filters: 16\n",
+            "layer_1_filters: 64\n",
+            "layer_2_filters: 64\n",
+            "Score: 0.7580645084381104\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 3\n",
+            "Dense layer: 256\n",
+            "layer_0_filters: 32\n",
+            "layer_1_filters: 64\n",
+            "layer_2_filters: 16\n",
+            "Score: 0.7553763389587402\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 2\n",
+            "Dense layer: 256\n",
+            "layer_0_filters: 64\n",
+            "layer_1_filters: 16\n",
+            "layer_2_filters: 32\n",
+            "Score: 0.7553763389587402\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 1\n",
+            "Dense layer: 128\n",
+            "layer_0_filters: 32\n",
+            "layer_1_filters: 32\n",
+            "layer_2_filters: 64\n",
+            "Score: 0.75\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 2\n",
+            "Dense layer: 1024\n",
+            "layer_0_filters: 32\n",
+            "layer_1_filters: 32\n",
+            "layer_2_filters: 16\n",
+            "Score: 0.7473118305206299\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 1\n",
+            "Dense layer: 256\n",
+            "layer_0_filters: 32\n",
+            "layer_1_filters: 32\n",
+            "layer_2_filters: 32\n",
+            "Score: 0.7446236610412598\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 1\n",
+            "Dense layer: 256\n",
+            "layer_0_filters: 16\n",
+            "layer_1_filters: 64\n",
+            "layer_2_filters: 64\n",
+            "Score: 0.7446236610412598\n",
+            "Trial summary\n",
+            "Hyperparameters:\n",
+            "Conv Layers: 1\n",
+            "Dense layer: 512\n",
+            "layer_0_filters: 64\n",
+            "layer_1_filters: 64\n",
+            "layer_2_filters: 16\n",
+            "Score: 0.7419354915618896\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
