Save and load model

--- a/main.ipynb
+++ b/main.ipynb
@@ -824,11 +824,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "APK7P3I7jxac",
-        "outputId": "adf94c90-18ab-45a7-ae24-db72ac751ac4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "APK7P3I7jxac",
+        "outputId": "adf94c90-18ab-45a7-ae24-db72ac751ac4"
       },
       "source": [
         "pip install -U keras-tuner"
@@ -895,11 +895,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8QvHSExQgfNQ",
-        "outputId": "c843e8fa-b20f-4141-88d0-0ba9da32c21a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8QvHSExQgfNQ",
+        "outputId": "c843e8fa-b20f-4141-88d0-0ba9da32c21a"
       },
       "source": [
         "from kerastuner.tuners import RandomSearch\n",
@@ -971,11 +971,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U9Jk2PrJs_Rd",
-        "outputId": "59d11b7a-8936-47a3-da36-987e1647453a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U9Jk2PrJs_Rd",
+        "outputId": "59d11b7a-8936-47a3-da36-987e1647453a"
       },
       "source": [
         "best_model.evaluate(test_images, test_labels)"
@@ -1004,11 +1004,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F163FqVOtR_h",
-        "outputId": "18dab311-dfc4-4c8a-e8c8-2cd3df2d9520",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F163FqVOtR_h",
+        "outputId": "18dab311-dfc4-4c8a-e8c8-2cd3df2d9520"
       },
       "source": [
         "best_model.summary()"
@@ -1048,11 +1048,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HX643M2XtcJl",
-        "outputId": "c36858bc-28d4-4bc4-da00-0c29b69752ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HX643M2XtcJl",
+        "outputId": "c36858bc-28d4-4bc4-da00-0c29b69752ae"
       },
       "source": [
         "tuner.results_summary()"
@@ -1148,6 +1148,89 @@
             "Score: 0.7419354915618896\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6iKnkIhhukm6"
+      },
+      "source": [
+        "## Saving and Load Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yKhWRJ8UuolL",
+        "outputId": "54e24693-01ab-4cf9-b69c-79a71c26bfc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "best_model.save('./my_model')"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: ./my_model/assets\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: ./my_model/assets\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l9twDGfcuyD4"
+      },
+      "source": [
+        "loaded_model = keras.models.load_model('./my_model')"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4fVDBIlRu8d_",
+        "outputId": "245ecba2-3a5f-4169-ad9c-1d78f9dfc4fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "loaded_model.evaluate(test_images, test_labels)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12/12 [==============================] - 0s 20ms/step - loss: 0.7457 - accuracy: 0.8065\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.7457301020622253, 0.8064516186714172]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
         }
       ]
     }
