--- a/main.ipynb
+++ b/main.ipynb
@@ -1246,12 +1246,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "txesDpyOvWmb",
-        "outputId": "094de446-8b91-4421-e1f0-24578335e494",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "txesDpyOvWmb",
+        "outputId": "094de446-8b91-4421-e1f0-24578335e494"
       },
       "source": [
         "rgb_images = np.array([example['image'].numpy() for example in ds_train.take(1)])\n",
@@ -1285,6 +1285,47 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PWS958-kyFiG"
+      },
+      "source": [
+        "## Convert PNG/JPG images into Numpy Format"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_ruY3j-myQ-Q",
+        "outputId": "0592e1de-c8df-487f-8cdc-0223153fa302",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import imageio\n",
+        "\n",
+        "im = imageio.imread('https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Battle_of_crecy_froissart.jpg/149px-Battle_of_crecy_froissart.jpg')\n",
+        "\n",
+        "print(type(im))\n",
+        "\n",
+        "im_np = np.asarray(im)\n",
+        "\n",
+        "print(im_np.shape)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'imageio.core.util.Array'>\n",
+            "(131, 149, 3)\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
